<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app">关于app</string>
    <string name="about_app_capital">关于APP</string>
    <string name="account_phone">手机</string>
    <string name="add">新增</string>
    <string name="address_add_text">+最多添加5个地址</string>
    <string name="address_management">地址管理</string>
    <string name="address_manager_tips">小茅温馨提醒：最多可保存5个收货地址</string>
    <string name="agc_02CAC09AC82718922B7A47188A3EF7CB928CA8D0EBE456FE3A763223DC25E33E">00A9592178DEA9E249AD7E33EA2A05C54CFA0A7DB5A9EBA42189FF696270F6CD0B2FCFD9C327EBAD62081FB5496C3BEE5E5283B154FE93D9A32E521122F7D33AF2</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00B2914B3F20B0A97E4E24062D3492D432055719285D2681088AA115E68C2597C09B229DFD8A3BA5B0FFD1B76B7A6B8C2DA5ED3C563B2CF81DF5F9D4E13F0B2AC26987ED9A07692132C38C7849E574C0C4</string>
    <string name="agc_0692DAD5D21427E7CCE627E8DC1ED71FDB307EBDC4DFB3A554BC60FCCE38E034">00CC668264ABA96FB8AF9637DF7EA02FD60E9112454F7386F6DA65F7EF0418D7A563EE0B35638ED0E95E0AA20C47407FE1F52B0E7FD58139F2C48E417EEE6EBAE5</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">008CC56284BCCBC21411492BE5C0ED6AE8BDA91D09126C0F6E621348A857174BCC5BEA7B45C21C9389782F9FB86D0D7BD58D8342FD8E83EF5592A21A2086CCCC7F485515015C88C130F55739172654688C39BF4350DE1C5F9638F22BA117E5A584</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00CF54ACA28642103EEEB7C72CABB8367975C75F16FDF8FFA77F95C716C78057A234008DDA32B8C5162C2670E23587C8E879497762ED6B0BCDE6E8B2AF1A4772D79FB54E9786A233CF06A791359AD23F4009BC8007CF71414759225C468A823B9F</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">00EB886CD4020F840A64917279713885307F1A7A60243400EC18A83292D34D19F261398DA868474E99C8B584BB0A05E7C5</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">8429C39D9813C4C1155FEC132F5570F3</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">0011B4A41B3297BC21E8F93A2689DD9B24B1B7532D3FFDE4AC8502570266D77B8F</string>
    <string name="agc_346F273384FE025F17324187A93E7E3BFB08DD081290E00F942EE066625A31DD">00E6B00C1969479AEE6366C0C3A48C539E5734565C1E01A29C8797E5CF50C1852512D5763561D33D1345B019DABD145C1B</string>
    <string name="agc_35623988AD86DCDA34F1257D6E93F34177702C6302115D897E60D38E0816CD35">00DF450715AFBA1969FD2D785BAA4108860AB1E67284C080DECE8DF81C11056AA25F5AC1D63E0D77A140519CAC2BB673D4</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">009DF7BA5CB8C3EAB73FE8B72B6F61EE6F2496531864832625CFE74053BB3A5C568975CFF9F2536759DD1D62B513FA7A57</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">00C3E917C1901F2FE754E1CA1BCF6E75FEC451A8DE36CD74B23170BA8437B06AC955D1E82C3025505F84E093435432C8FBA34FB7238812869F446241E01C00493C0243034A4E26ED0542FA583C5D4DDB4900B5AF5A5BF79C764B3DEA48C9763C63</string>
    <string name="agc_3FC6CD8093B4922272D7E36E11F6576A13C3767B8DFE7E7C806E0B096B233E18">003BA99D34CD07761B7E4CD4FF0F331F69D8D45A9E2334029A3BC80C36F97DA703D96BE9CE2BF5C31091162C07E980A4F1</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">00744D0977D49F33A7833F5345343E2AF4CFEF1476077EA848C7C27C72AA0C4542</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">008B2703FADE698E09499F570BD6FED571D1056F426E005AF1BEAF73990E0185716D8E047C2C1D6A794094035F4F04BB41F34D6050AB76DAFAD972AC08A12F0E40</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">0005086B3DE8F55870D257887E6DEE626BF2433999E03E8137F22DC95832A66901</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">00CEB6C4EF5D434CB3B176BBAC42966DA8A25264E5231DDF3A4FD8FC8EE9C61C18E71959320D534B9D31C91E2BB2D69AECB1D8318B4CCC94B7DC36B4F032E798E1</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">008840A93F9019DACB0D8EBFACAFEE9057A1D6736B2686D37636A31FF195CBB254</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">00B621103014424AA03675093324196DE8625C7BE10771BF7ACD8F01B90EC5E6A71C11C260AD880457AA36D5CB0CEE097D</string>
    <string name="agc_55A14C88686718883C90D427958F540EC05210E430ED915D772D8F34C350D08B">0093DDE975B130034C10CFF831D64F23CF02F36CDFA9789F5D2509CDB9726F14805F4E3FBC08AF3C74CD7057E526B22DDD7B8E7132C9430096323511CAB7A7FAF8</string>
    <string name="agc_56BB9FCDF7DAFDC12F18BE8BF765769B14E090D615353A1FF24238CC17EF2F2F">00C7E12011BFFD5E17806255B291D2B2439C8E8DF3A0C7C1DD7C64F381147ADD0FADECA04FAA3BE5FAE646915554B541B769164D660EEB3044D714183594D0F7C1</string>
    <string name="agc_5B1EF301F6E8D26793B9699E972C1FE3B4563543360C2A380F9C42CED9967B7B">00AF4812AE0A7CF8503E1767361764841A28B308E18D3F424E922A36AF5B9E9FC125EAB05B370A46C8178EA0D1C2303F5D5AD8A2AC3AA3F878AD7D64AE6384DB62CEA26BFF2F3F8D0163E0399CCA3C60D0AB341966D52F66A7FB718CEF7E104B6B</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">00489E150672F72C75E32A35A82E26BE3B7A4DE8CDAE09E02AA7216CC4EB559BD188C9917C678543077C16E20809339EF0</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">009DB26A9B2028FA10DB06AC6E9AB12CEEA9B8E95BC8B101775E387CE4EB535014B0B2534776C1893CBAC49B55261DB2CF7AA21696CF1ED144D57ABCCF3A64C2AF564DC529EF7844E6812555A40F97FBF91D9C1E2064D82D7741C9AC5E318ADB8C516EB52ED6E7B469DD1BF3D14F6EE1F13C98CAC6CB1865AF6EFABF305C92F9559E14596015ED2E160F5FD63934DDEAE41D05E667A7ED51FC37AD08AEEA8395F88DB922CCBE596CE9EF631D2A751039013B439AFFC32557B143A0E5C240CD6CA984D17FBA27D24A4499FB6DC7A4EAAB08ED563AD34B8C880CE14D2F5F3D9561E6</string>
    <string name="agc_66412D70318648FA3BDD00A3CB2E73EE439F788EBA8010232B3B145A1ADE18F4">006CCCC4AD995DA969E53973039AFC08A66E7E012594BEC79E49782915EFAFE7BB</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">00FD5B16C58E6CB17CF1A8391DC118BED7581DE4818604BDCA7B452135DF524CE7</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">0024E0DC87AB3763EC1BA19B4ABD74A4B87D3D5B5605F5CF0F7FC8A59DE7880EC6AF401A5B2003DD7C1E37217979B4617F5CBC8405D439FF7909E5830E981E5832</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">00676065CFF552BFBBBC56D3E0782AD47C34C076ACCB8C1E9B31DBDB9BE2C4099F96245D5BE68498806175AEBD0BBEDCB1</string>
    <string name="agc_7946AE46AB6C7F8CBDCAF61B99109C7C5309E95125FEA7458FBF603EC34F79F0">00FB87CE66BE14455025245C3FD4A43BC741883E742BA4C267FA7A25E80BE718AF</string>
    <string name="agc_7AE336DAB422A03E8E8A5A88C60ACA96939FAAC47AFC07F2870F0CAD9FB9C952">00AD5BA71E4027D21A5AA6374B6863264430E6CF29EA3F79AE253206BF94799467CDF5BE05C8DD559C37AC53C8B199F035ED467970AAECB6A9D50806CEABCADFD9</string>
    <string name="agc_82EF8D63B2BE36159522C21C4D086D73D713FEEEE73A9F1FAF569DFCE12A4EAD">00D406851BC070E2B44FB952C2C9346ACC7004781BD7D4D49578A1BD1CFA10E8B7ED8D1A7EF682D9237D2EB36521B1CEBC3D900C6E2869DF1EE4DFBAC19D3F515C</string>
    <string name="agc_836CE23119A6E21FA622B66B25341D1D32735FAA2839B33D60C4D59B7AD62151">001B3A65F8D96667DCF139DEA4E490E68510AE9AB4DF70674027D6F351338E60688806829DB194961A9998C2A8AEC07F7FB4E408DDE23EEABA3F449427479D46C6</string>
    <string name="agc_840FE2348B9312C51373EFB2E2F030D10C43688DDE98467C8DD63AC7DC1855AB">00CF7143ADB5E3D442DC0190FFEF6E9049951A68A2CF0EFC416ED7322BC0E065F8</string>
    <string name="agc_864E57EAF6D5DB70BE861700AFF6C17A93A9D202732BCB4048B0CDBB6EBF578F">00A08551E46A588478F54812B283C90CC5EADC9BE24B7EF0C93C559AD9E036ECB3E10A95F9FAA743ECCBA078D7DFDA4DABA0B82E359E2275A38125D5725D49EF76</string>
    <string name="agc_8CBEB54DD45F5D2D07C517A93D2C07AC37E088876F07FDDF2D74CEFF5500AE68">000F249CB41226CD8CFDC20742044F109B0515841888AEB8771D6A4EA1851371BE835917B72032244888806F0BA8240D24</string>
    <string name="agc_8EC943399EB9730C69A7B8E4E46D24911E8F900AC2F52A3DF251327694CD8EFA">0077505F5396A986F33C5C3DEA2DE67E7611153DEE7A7644E373AE0CCA18AA328279DBB7A78CD58E73A71D7EDAC470FAE2F6C7ABAF0371590541CC1BE2BAB04051</string>
    <string name="find_back_certification">找回身份</string>
    <string name="hour">小时</string>
    <string name="minute">分</string>
    <string name="ocr_front_tips">将身份证人像面放入采集框中</string>
    <string name="ocr_tips1">保持光线明亮</string>
    <string name="ocr_tips2">文字不要有反光、遮挡</string>
    <string name="second">秒</string>
    <string name="share_commandcode">口令码</string>
    <string name="share_copy">复制链接</string>
    <string name="share_cover">分享海报</string>
    <string name="share_delete">删除</string>
    <string name="share_qq_friend">QQ好友</string>
    <string name="share_qrcode">二维码分享</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_report">举报</string>
    <string name="share_wechat_friend">微信好友</string>
    <string name="share_wechat_moments">微信朋友圈</string>
    <string name="share_weibo">新浪微博</string>
    <string name="shops_gps_failed_error_hint">请检查WiFi或移动数据网络是否正常或手动选择省市查看门店</string>
    <string name="shops_gps_permission_confirm">去开启</string>
    <string name="shops_gps_permission_title">定位服务尚未开启</string>
    <string name="unsubscribe_account">注销账户</string>
    <string name="userpage_all_order">全部订单</string>
    <string name="userpage_ready_arrive">待收货</string>
    <string name="userpage_ready_comment">待评价</string>
    <string name="userpage_ready_get_goods">待提货</string>
    <string name="userpage_ready_pay">待付款</string>
    <string name="view_info">视图信息</string>
    <string name="view_info_recyclerview">RecyclerView</string>
    <string name="view_info_tangram">TangramHolder</string>
    <string name="view_info_view_info">Fragment</string>
    <string name="view_info_viewholder">ViewHolder</string>
    <string name="view_info_viewpager">ViewPager</string>
    <string name="view_info_webview">WebView</string>
    <string name="view_info_window">Activity/Dialog：</string>
</resources>