<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_wx_mini_app"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_wechat_btn"
        app:name="@string/share_wechat_friend"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_weixin_moment"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_wechat_moments_btn"
        app:name="@string/share_wechat_moments"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_sina_weibo"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_weibo_btn"
        app:name="@string/share_weibo"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_qq_friend"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_qq_friend_btn"
        app:name="@string/share_qq_friend"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_qzone"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_qzone_btn"
        app:name="@string/share_qzone"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_copy"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_copy_btn"
        app:name="@string/share_copy"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_cover"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_qrcode_btn"
        app:name="@string/share_cover"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_commandcode"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_commandcode_btn"
        app:name="@string/share_commandcode"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_qrcode"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_qrcode_btn"
        app:name="@string/share_qrcode"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_report"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_report_btn"
        app:name="@string/share_report"/>
    <com.moutai.mall.share.view.OneShareView
        android:id="@+id/osv_delete"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSrc="@drawable/selector_share_video_delete_btn"
        app:name="@string/share_delete"/>
</FrameLayout>
