<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="40dp">
    <TextView
        android:textSize="20dp"
        android:textColor="@color/gray_33"
        android:gravity="center"
        android:id="@+id/tvHour"
        android:background="@drawable/bg_countdown_bg"
        android:layout_width="40dp"
        android:layout_height="40dp"/>
    <TextView
        android:textSize="14dp"
        android:textColor="@color/gray_33"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="12dp"
        android:text="@string/hour"/>
    <TextView
        android:textSize="20dp"
        android:textColor="@color/gray_33"
        android:gravity="center"
        android:id="@+id/tvMinute"
        android:background="@drawable/bg_countdown_bg"
        android:layout_width="40dp"
        android:layout_height="40dp"/>
    <TextView
        android:textSize="14dp"
        android:textColor="@color/gray_33"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="12dp"
        android:text="@string/minute"/>
    <TextView
        android:textSize="20dp"
        android:textColor="@color/gray_33"
        android:gravity="center"
        android:id="@+id/tvSecond"
        android:background="@drawable/bg_countdown_bg"
        android:layout_width="40dp"
        android:layout_height="40dp"/>
    <TextView
        android:textSize="14dp"
        android:textColor="@color/gray_33"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="12dp"
        android:text="@string/second"/>
</LinearLayout>
