<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_view_info_control"
    android:padding="4dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">
    <RelativeLayout
        android:padding="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_info"
            android:layout_weight="1"
            style="@style/YS.Text.Lighter"/>
        <ImageView
            android:id="@+id/ivRefresh"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/icon_view_info_refresh"
            android:layout_toLeftOf="@+id/ivClose"/>
        <ImageView
            android:layout_gravity="right"
            android:id="@+id/ivClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/icon_view_info_close"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:gravity="left"
        android:id="@+id/tvActivityInfo"
        android:background="@drawable/bg_view_info_control"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_info_window"
        style="@style/YS.Text.Lighter"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTitle">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cbFragmentInfo"
                    android:layout_toRightOf="@+id/switch_text"
                    android:layout_centerVertical="true"
                    style="@style/YS.CheckBox"/>
                <TextView
                    android:id="@+id/tvFragmentInfo"
                    android:layout_marginLeft="16dp"
                    android:text="@string/view_info_view_info"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/YS.Text.Lighter"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cbRecyclerViewInfo"
                    android:layout_toRightOf="@+id/switch_text"
                    android:layout_centerVertical="true"
                    style="@style/YS.CheckBox"/>
                <TextView
                    android:id="@+id/tvRecyclerViewInfo"
                    android:layout_marginLeft="16dp"
                    android:text="@string/view_info_recyclerview"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/YS.Text.Lighter"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cbViewPagerInfo"
                    android:layout_toRightOf="@+id/switch_text"
                    android:layout_centerVertical="true"
                    style="@style/YS.CheckBox"/>
                <TextView
                    android:layout_marginLeft="16dp"
                    android:text="@string/view_info_viewpager"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/YS.Text.Lighter"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cbViewHolderInfo"
                    android:layout_toRightOf="@+id/switch_text"
                    android:layout_centerVertical="true"
                    style="@style/YS.CheckBox"/>
                <TextView
                    android:layout_marginLeft="16dp"
                    android:text="@string/view_info_viewholder"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/YS.Text.Lighter"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cbTangramHolderInfo"
                    android:layout_toRightOf="@+id/switch_text"
                    android:layout_centerVertical="true"
                    style="@style/YS.CheckBox"/>
                <TextView
                    android:layout_marginLeft="16dp"
                    android:text="@string/view_info_tangram"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/YS.Text.Lighter"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cbWebView"
                    android:layout_toRightOf="@+id/switch_text"
                    android:layout_centerVertical="true"
                    style="@style/YS.CheckBox"/>
                <TextView
                    android:layout_marginLeft="16dp"
                    android:text="@string/view_info_webview"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/YS.Text.Lighter"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
