<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/error_view"
    android:background="@color/gray_f8"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:textSize="20dp"
            android:textColor="#333333"
            android:gravity="center"
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginRight="47dp"
            android:text="@string/shops_gps_permission_title"
            android:includeFontPadding="false"
            android:drawableTop="@mipmap/icon_shop_location_failed_golden"
            android:drawablePadding="18dp"
            android:lineSpacingExtra="4dp"/>
        <TextView
            android:textSize="14dp"
            android:textColor="@color/gray_7f"
            android:gravity="center"
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="47dp"
            android:text="@string/shops_gps_failed_error_hint"/>
        <com.google.android.material.button.MaterialButton
            android:textColor="@color/white"
            android:id="@+id/btConfirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="53dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="53dp"
            android:text="@string/shops_gps_permission_confirm"
            app:cornerRadius="2dp"/>
    </LinearLayout>
</RelativeLayout>
