<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_decoration"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:paddingStart="20dp"
        android:paddingEnd="25dp">
        <TextView
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/gray_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_phone"/>
        <TextView
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/gray_33"
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
    <TextView
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/gray_33"
        android:gravity="center_vertical"
        android:id="@+id/find_back"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/find_back_certification"
        android:paddingStart="20dp"
        android:paddingEnd="25dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="89dp"/>
    <TextView
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/gray_33"
        android:gravity="center"
        android:id="@+id/unsubscribe_account"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:text="@string/unsubscribe_account"/>
</LinearLayout>
