<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.netease.nis.ocr.OcrScanView
        android:id="@+id/ocr_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">
        <TextView
            android:textSize="24dp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_scan_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp">
            <ImageView
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:src="@mipmap/circle_white"/>
            <TextView
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ocr_tips1"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:src="@mipmap/circle_white"/>
            <TextView
                android:textSize="16dp"
                android:textColor="@color/white"
                android:id="@+id/tv_scan_type_desc"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ocr_front_tips"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:src="@mipmap/circle_white"/>
            <TextView
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ocr_tips2"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
